View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0031743 | Open CASCADE | OCCT:DRAW | public | 2020-08-31 10:57 | 2020-12-02 17:13 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.5.0 | ||||
Target Version | 7.5.0 | Fixed in Version | 7.5.0 | ||
Summary | 0031743: Draw Harness - fix misprint in Draw_Interpretor::SetToColorize() | ||||
Description | There is a misprint in Draw_Interpretor::SetToColorize() ignoring the method argument. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR31743 has been created by kgv. SHA-1: bf509ae49c390592b2e07506407ac34f7a030426 Detailed log of new commits: Author: kgv Date: Mon Aug 31 11:03:01 2020 +0300 0031743: Draw Harness - fix misprint in Draw_Interpretor::SetToColorize() |
|
Please raise the patch - OCCT branch: CR31743. |
|
Combination - OCCT branch : IR-2020-09-04 master SHA - a516227511f3452f9f55b79c961265b0bf210793 a206de37fbfa0bf71bd534ae47192bbec23b8522 Products branch : IR-2020-09-04 SHA - 134448d280fb82bfb14ffc6255ac1cb53f7fd1cf was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17319.18000000012 / 17284.370000000214 [+0.20%] Products Total CPU difference: 12059.670000000087 / 12007.590000000067 [+0.43%] Windows-64-VC14: OCCT Total CPU difference: 18776.390625 / 18770.796875 [+0.03%] Products Total CPU difference: 13251.640625 / 13222.90625 [+0.22%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR31743 has been deleted by inv. SHA-1: bf509ae49c390592b2e07506407ac34f7a030426 |
Date Modified | Username | Field | Change |
---|---|---|---|
2020-08-31 10:57 | kgv | New Issue | |
2020-08-31 10:57 | kgv | Assigned To | => kgv |
2020-08-31 10:57 | kgv | Relationship added | child of 0031731 |
2020-08-31 11:00 | git | Note Added: 0093754 | |
2020-08-31 11:00 | kgv | Note Added: 0093755 | |
2020-08-31 11:00 | kgv | Assigned To | kgv => bugmaster |
2020-08-31 11:00 | kgv | Severity | minor => trivial |
2020-08-31 11:00 | kgv | Status | new => resolved |
2020-08-31 11:00 | kgv | Status | resolved => reviewed |
2020-09-05 12:06 | bugmaster | Note Added: 0094049 | |
2020-09-05 12:06 | bugmaster | Status | reviewed => tested |
2020-09-05 12:15 | bugmaster | Test case number | => Not required |
2020-09-05 12:25 | bugmaster | Changeset attached | => occt master dda9303c |
2020-09-05 12:25 | bugmaster | Status | tested => verified |
2020-09-05 12:25 | bugmaster | Resolution | open => fixed |
2020-09-05 12:35 | git | Note Added: 0094092 | |
2020-12-02 16:43 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:13 | emo | Status | verified => closed |