0031743: Draw Harness - fix misprint in Draw_Interpretor::SetToColorize()